<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/grid_padding" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_recipient" />

    <EditText
        android:id="@+id/email_recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_subject" />

    <EditText
        android:id="@+id/email_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailSubject" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_attachment" />

    <TextView
        android:id="@+id/file_attachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        />

    <Button
        android:id="@+id/btn_find_file"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_find_attachment"
        android:onClick="findAttachment"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_message" />

    <EditText
        android:id="@+id/email_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/btn_tx_email" />

</LinearLayout>