<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/grid_padding">

    <TextView 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/tx_recipient"
        />

    <EditText
        android:id="@+id/sms_recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" 
        />
    
    <TextView 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/tx_message"
        />

    <EditText
        android:id="@+id/sms_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textShortMessage">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_send_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_tx_sms"
        android:onClick="sendMessage" 
        />
    
</LinearLayout>
